# subgraph

./: .gitignore  README.md  pyproject.toml
doc/coverage/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_subgraph_py.html
science/: subgraph.tex
src/: subgraph.py
tests/: test_subgraph.py
